feat: Implement onboarding and main application structure
- Added OnboardingPage with navigation to sign up and sign in.
- Created CartPage, DashboardPage, HomePage, SearchPage, and SettingPage with basic UI structure.
- Integrated AutoRouter for navigation between pages.
- Implemented BottomNavigationBar in DashboardPage for easy navigation.
- Added assets for icons and images used in the application.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   hooks_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   auto_route: ^10.1.2
+  flutter_gen: ^5.11.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -24,13 +26,25 @@ dev_dependencies:
   riverpod_generator: ^2.6.5
   build_runner: ^2.5.4
   auto_route_generator: ^10.1.0
+  flutter_gen_runner: ^5.11.0
+
+flutter_gen:
+  output: lib/gen/
+
+  # Optional
+  integrations:
+    image: true
+    flutter_svg: false
+    rive: false
+    lottie: false
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
