--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   auto_route: ^10.1.2
   flutter_gen: ^5.11.0
   flutter_screenutil: ^5.9.3
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^2.2.1
+  google_fonts: ^6.3.1
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +33,8 @@ dev_dependencies:
   build_runner: ^2.5.4
   auto_route_generator: ^10.1.0
   flutter_gen_runner: ^5.11.0
+  json_serializable: ^6.9.5
+  freezed: ^3.1.0
 
 flutter_gen:
   output: lib/gen/
@@ -34,7 +42,7 @@ flutter_gen:
   # Optional
   integrations:
     image: true
-    flutter_svg: false
+    flutter_svg: true
     rive: false
     lottie: false
 
@@ -45,6 +53,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
