--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   skeletonizer: ^2.1.0+1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
